Prepare for OSS release
Also fixed some bugs found by findbugs, especially a very nasty bug
where the exception was not thrown during a failed write to a field.